--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Add Some Todos!</h1>
   <form id="addTodo">
-    <input id="addTodoText" placeholder="add a todo" maxlength="31" autocomplete="off" novalidate>
+    <input id="addTodoText" placeholder="Type your todos here..." maxlength="31" autocomplete="off" novalidate>
   </form>
   <footer>Built by
     <a href="http://rmorabia.com">Radhika Morabia</a>.
